:lipstick: fix on mobile, ignoring overflow hide

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -2,7 +2,7 @@ html * {
   font-family: $font;
 }
 
-html {
+html, body {
   overflow-y: auto;
   overflow-x: hidden;
 }
